# text-proc

./: Dockerfile  pyproject.toml  requirements.txt  test_app.py
src/: main.py
