[tool.poetry]
name = "textproc"
version = "0.1.0"
description = ""
authors = ["Akos Peter <akos.peter@connatix.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.2"
nltk = "^3.8.1"
pysbd = "^0.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
